--- a/apps/main/vercel.json
+++ b/apps/main/vercel.json
@@ -3,18 +3,17 @@
   "installCommand": "node -v && pnpm --workspace-root --filter main... --filter docs... install --config.dedupe-peer-dependents=false",
   "build": {
     "env": {
-      "ENABLE_EXPERIMENTAL_COREPACK": "1",
-      "VERCEL_DEBUG_BUILD": "1"
+      "ENABLE_EXPERIMENTAL_COREPACK": "1"
     }
   },
   "routes": [
     {
       "src": "/docs(.*)",
-      "dest": "/apps/docs$1"
+      "dest": "apps/docs$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/apps/main/$1"
+      "src": "(.*)",
+      "dest": "apps/main$1"
     }
   ]
 }
