--- a/packages/merkle-components/package.json
+++ b/packages/merkle-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "merkle-components",
+  "name": "@merkle/components",
   "version": "0.0.1",
   "private": true,
   "main": "./dist/index.js",
