--- a/packages/merkle-components/package.json
+++ b/packages/merkle-components/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "tsconfig": "*",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "next": "^14.2.0"
   }
 }
