Added Style Tokens and Processing Scripts

--- a/package.json
+++ b/package.json
@@ -19,12 +19,28 @@
     "release": "turbo run build --filter=main... && changeset publish",
     "type-check": "turbo run type-check",
     "start": "turbo run start",
-    "version-packages": "changeset version"
+    "version-packages": "changeset version",
+    "gen-tokens": "pnpm gen-tokens-global && pnpm gen-tokens-semantic && pnpm gen-tokens-brand1-light && pnpm gen-tokens-brand1-dark && pnpm gen-tokens-brand2-light && pnpm gen-tokens-brand2-dark",
+    "gen-tokens-global": "token-transformer tokens/tokens.json tokens/output/global.json global",
+    "gen-tokens-semantic": "token-transformer tokens/tokens.json tokens/output/semantic.json global,semantic global",
+    "gen-tokens-brand1-light": "token-transformer tokens/tokens.json tokens/output/brand1-light.json global,brand1-light global",
+    "gen-tokens-brand1-dark": "token-transformer tokens/tokens.json tokens/output/brand1-dark.json global,brand1-dark global",
+    "gen-tokens-brand2-light": "token-transformer tokens/tokens.json tokens/output/brand2-light.json global,brand2-light global",
+    "gen-tokens-brand2-dark": "token-transformer tokens/tokens.json tokens/output/brand2-dark.json global,brand2-dark global",
+    "gen-styles": "node ./tokens/processing/generate-styles.js",
+    "postcss": "postcss apps/main/public/styles/styles.css -o apps/main/public/styles/main.css",
+    "token-pipeline": "pnpm gen-tokens && pnpm gen-styles && pnpm postcss"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.10",
     "@types/node": "22.9.1",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
+    "typescript": "^2.7",
     "prettier": "3.3.3",
+    "style-dictionary": "3.9.2",
+    "token-transformer": "^0.0.33",
     "turbo": "^2.3.0"
   },
   "packageManager": "pnpm@9.4.0",
