Fixed deployment errors

--- a/apps/main/tsconfig.json
+++ b/apps/main/tsconfig.json
@@ -38,6 +38,9 @@
         "name": "next"
       }
     ],
+    "types": [
+      "node"
+    ],
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
   "include": [
